Docker/Kubernetes/kube/ingressTRUE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: kube-foo-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: kube-bar-svc
            port: 
              number: 80
